--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,7 @@
     "background": {
         "service_worker": "background.js"
       },
-    "permissions": ["storage", "activeTab", "scripting"],
+    "permissions": ["storage", "tabs", "activeTab", "scripting", "webNavigation", "windows"],
     "action": {
       "default_popup": "./popup/popup.html",
       "default_icon": {
